<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingVertical="32dp"
        android:paddingHorizontal="32dp"
        android:background="@color/light_gray_1"
        tools:context=".CreateAccountActivity">

    <ImageView
            android:id="@+id/sign_up_icon"
            android:layout_width="128dp"
            android:layout_height="128dp"
            android:layout_centerHorizontal="true"
            android:layout_marginVertical="40dp"
            android:src="@drawable/sign_up"/>

    <LinearLayout
            android:id="@+id/hello_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginVertical="32dp"
            android:layout_below="@id/sign_up_icon">

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/hello"
                android:textStyle="bold"
                android:textSize="36sp"
                android:textColor="@color/black"/>

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/please"
                android:textStyle="bold"
                android:textSize="32sp"
                android:textColor="@color/black"/>

    </LinearLayout>

    <LinearLayout
            android:id="@+id/form_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/hello_layout"
            android:orientation="vertical">

        <EditText
                android:id="@+id/email_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:textSize="20sp"
                android:background="@drawable/rounded_corner"
                android:padding="16dp"
                android:layout_marginTop="12dp"/>

        <EditText
                android:id="@+id/password_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textSize="20sp"
                android:background="@drawable/rounded_corner"
                android:padding="16dp"
                android:layout_marginTop="12dp"/>

        <EditText
                android:id="@+id/confirm_password_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password_confirm"
                android:inputType="textPassword"
                android:textSize="20sp"
                android:background="@drawable/rounded_corner"
                android:padding="16dp"
                android:layout_marginTop="12dp"/>
        
        <com.google.android.material.button.MaterialButton
                android:id="@+id/create_account_button"
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:text="@string/sign_up"
                android:layout_marginTop="12dp"
                android:textSize="16sp"
                android:background="@drawable/rounded_corner"/>

        <ProgressBar
                android:id="@+id/progress_bar"
                android:layout_width="24dp"
                android:layout_height="64dp"
                android:layout_gravity="center"
                android:layout_marginTop="12dp"
                android:visibility="gone"/>

    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/form_layout"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginVertical="12dp">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/already"/>

        <TextView
                android:id="@+id/login_text_view_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:textStyle="bold"
                android:layout_marginLeft="4dp"/>

    </LinearLayout>


</RelativeLayout>