<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="12dp"
        android:layout_marginVertical="8dp"
        android:background="@drawable/rounded_corner"
        android:backgroundTint="@color/white">

    <TextView
            android:id="@+id/note_title_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/note_title"
            android:textSize="18sp"
            android:textColor="@color/dark_gray_3"
            android:layout_marginVertical="4dp"/>

    <TextView
            android:id="@+id/note_content_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/note_content"
            android:textSize="17sp"
            android:textColor="@color/dark_gray_2"
            android:layout_marginVertical="4dp"
            android:maxLines="2"
            android:ellipsize="end"/>

    <TextView
            android:id="@+id/note_timestamp_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/note_timestamp"
            android:textSize="12sp"
            android:textColor="@color/deep_yellow"
            android:layout_marginVertical="4dp"
            android:gravity="end"/>

</LinearLayout>