<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/light_gray_1"
        android:padding="16dp"
        tools:context=".NoteDetailsActivity">

    <RelativeLayout
            android:id="@+id/title_bar_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <TextView
                android:id="@+id/page_title_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:text="@string/add"
                android:textSize="32sp"
                android:textColor="@color/black"
                android:textStyle="bold"/>

        <ImageButton
                android:id="@+id/save_note_button"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:src="@drawable/ic_baseline_done_24"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/save"
                app:tint="@color/black"/>

        <ImageButton
                android:id="@+id/delete_note_button"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_centerVertical="true"
                android:layout_toStartOf="@id/save_note_button"
                android:src="@drawable/ic_baseline_delete_24"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:visibility="gone"
                android:contentDescription="@string/delete"
                app:tint="@color/black"/>

    </RelativeLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/title_bar_layout"
            android:layout_marginVertical="26dp"
            android:orientation="vertical"
            android:padding="16dp"
            android:backgroundTint="@color/white"
            android:background="@drawable/rounded_corner">

        <EditText
                android:id="@+id/note_title_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/title"
                android:inputType="text"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:layout_marginVertical="8dp"
                android:padding="12dp"
                android:autofillHints="no"/>

        <EditText
                android:id="@+id/note_content_edit_text"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/content"
                android:inputType="text"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:layout_marginVertical="8dp"
                android:padding="12dp"
                android:gravity="top"
                android:autofillHints="no"/>

    </LinearLayout>

    <TextView
            android:id="@+id/delete_note_text_view_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/delete"
            android:layout_alignParentBottom="true"
            android:gravity="center"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:visibility="gone"
            android:textStyle="bold"/>


</RelativeLayout>